<resources>
    <string name="app_name">tests</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="backspace"><![CDATA[<-]]></string>
    <string name="clear">CLEAR</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="point">.</string>
    <string name="equal">=</string>


</resources>
